--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,4 +107,17 @@
             android:inputType="none" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/explore"
+        android:layout_width="169dp"
+        android:layout_height="69dp"
+        android:onClick="Explore"
+        android:text="Explore More"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.971" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
